# subd-and-conquer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
assets/shaders/flat_color/: fragment.glsl
cmake/: fetchdependencies.cmake
src/: CMakeLists.txt  control_mesh.cpp  control_mesh.hpp  main.cpp  main_application.cpp  main_application.hpp
src/geometry/: CMakeLists.txt  halfedge.cpp  halfedge.hpp  indexed_mesh.cpp  indexed_mesh.hpp  io.cpp  io.hpp  subdivision.cpp  subdivision.hpp
src/gl/: application.cpp  framebuffer.cpp  io.cpp  io.hpp  mesh.cpp  shader.cpp  texture.cpp
